@@ -197,6 +197,8 @@ PHP_METHOD(Geometry, crosses);
 PHP_METHOD(Geometry, within);
 PHP_METHOD(Geometry, contains);
 PHP_METHOD(Geometry, overlaps);
+PHP_METHOD(Geometry, covers);
+PHP_METHOD(Geometry, coveredBy);
 PHP_METHOD(Geometry, equals);
 PHP_METHOD(Geometry, equalsExact);
 PHP_METHOD(Geometry, isEmpty);
@@ -254,6 +256,8 @@ static function_entry Geometry_methods[] = {
     PHP_ME(Geometry, within, NULL, 0)
     PHP_ME(Geometry, contains, NULL, 0)
     PHP_ME(Geometry, overlaps, NULL, 0)
+    PHP_ME(Geometry, covers, NULL, 0)
+    PHP_ME(Geometry, coveredBy, NULL, 0)
     PHP_ME(Geometry, equals, NULL, 0)
     PHP_ME(Geometry, equalsExact, NULL, 0)
     PHP_ME(Geometry, isEmpty, NULL, 0)
@@ -1063,6 +1067,60 @@ PHP_METHOD(Geometry, overlaps)
     other = getRelay(zobj, Geometry_ce_ptr);
 
     ret = GEOSOverlaps(this, other);
+    if ( ret == 2 ) RETURN_NULL(); /* should get an exception first */
+
+    /* return_value is a zval */
+    retBool = ret;
+    RETURN_BOOL(retBool);
+}
+
+/**
+ * bool GEOSGeometry::covers(GEOSGeometry)
+ */
+PHP_METHOD(Geometry, covers)
+{
+    GEOSGeometry *this;
+    GEOSGeometry *other;
+    int ret;
+    zend_bool retBool;
+    zval *zobj;
+
+    this = (GEOSGeometry*)getRelay(getThis(), Geometry_ce_ptr);
+
+    if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "o", &zobj)
+            == FAILURE) {
+        RETURN_NULL();
+    }
+    other = getRelay(zobj, Geometry_ce_ptr);
+
+    ret = GEOSCovers(this, other);
+    if ( ret == 2 ) RETURN_NULL(); /* should get an exception first */
+
+    /* return_value is a zval */
+    retBool = ret;
+    RETURN_BOOL(retBool);
+}
+
+/**
+ * bool GEOSGeometry::coveredBy(GEOSGeometry)
+ */
+PHP_METHOD(Geometry, coveredBy)
+{
+    GEOSGeometry *this;
+    GEOSGeometry *other;
+    int ret;
+    zend_bool retBool;
+    zval *zobj;
+
+    this = (GEOSGeometry*)getRelay(getThis(), Geometry_ce_ptr);
+
+    if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "o", &zobj)
+            == FAILURE) {
+        RETURN_NULL();
+    }
+    other = getRelay(zobj, Geometry_ce_ptr);
+
+    ret = GEOSCoveredBy(this, other);
     if ( ret == 2 ) RETURN_NULL(); /* should get an exception first */
 
     /* return_value is a zval */
